# medgemma-ct

./: .gitignore  CLAUDE.md  README.md  ct_utils.py  pyproject.toml  streamlit_app.py
docs/plans/: 2026-02-16-medgemma-ct-streamlit-design.md  2026-02-16-medgemma-ct-streamlit-plan.md
docs/superpowers/plans/: 2026-04-07-mlx-migration.md
docs/superpowers/specs/: 2026-04-07-mlx-migration-design.md
samples/: CT_0000.dcm  CT_0001.dcm  CT_0002.dcm  CT_0003.dcm  CT_0004.dcm  CT_0005.dcm  CT_0006.dcm  CT_0007.dcm  CT_0008.dcm  CT_0009.dcm  CT_0010.dcm  CT_0011.dcm  CT_0012.dcm  CT_0013.dcm  CT_0014.dcm  CT_0015.dcm
tests/: test_ct_utils.py
