[project]
name = "medgemma-ct"
version = "0.2.0"
description = "CT scan analysis with MedGemma via mlx-vlm on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm",
    "numpy",
    "pillow",
    "pydicom",
    "python-dotenv",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
